--- a/okteto-compose.yaml
+++ b/okteto-compose.yaml
@@ -13,3 +13,6 @@ services:
       - API_HASH=${API_HASH}
 
       - BOT_TOKEN=${BOT_TOKEN}
+      - WEBHOOK=${WEBHOOK} 
+      - DATABASE_URL=${DATABASE_URL} 
+      - OWNER_ID=${OWNER_ID} 
